--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "react_learn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "antd": "^3.22.0",
+    "echarts": "^4.2.1",
+    "flv.js": "^1.5.0",
+    "gulp": "^4.0.2",
+    "mdui": "^0.4.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
